<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">房贷计算器</string>
    <string name="action_settings">Settings</string>
    <string name="main_home">商业贷款</string>
    <string name="more">关于</string>
    <string name="main_news">公积金贷款</string>
    <string name="main_my_info">组合贷款</string>
    <string name="menu_search">建议反馈</string>
    <string name="title_activity_items">显示结果</string>
</resources>
