<?xml version="1.0" encoding="utf-8"?>
<TabHost xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@android:id/tabhost"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="vertical">

        <FrameLayout
            android:id="@android:id/tabcontent"
            android:layout_width="fill_parent"
            android:layout_height="0.0dip"
            android:layout_weight="0.18">


        </FrameLayout>

        <TabWidget
            android:id="@android:id/tabs"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.0"
            android:visibility="gone" />

        <RadioGroup
            android:id="@+id/main_tab"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:background="@drawable/maintab_toolbar_bg"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/radio_button0"
                style="@style/main_tab_bottom"
                android:layout_marginTop="2.0dip"
                android:drawableTop="@drawable/icon_1_n"
                android:text="@string/main_home" />

            <RadioButton
                android:layout_marginTop="2.0dip"
                android:text="@string/main_news"
                android:drawableTop="@drawable/icon_3_n"
                android:id="@+id/radio_button1"
                style="@style/main_tab_bottom" />

            <RadioButton
                android:layout_marginTop="2.0dip"
                android:text="@string/main_my_info"
                android:drawableTop="@drawable/icon_4_n"
                android:id="@+id/radio_button2"
                style="@style/main_tab_bottom" />

            <RadioButton
                android:layout_marginTop="2.0dip"
                android:text="@string/menu_search"
                android:drawableTop="@drawable/icon_2_n"
                android:id="@+id/radio_button3"
                style="@style/main_tab_bottom" />


            <RadioButton
                android:id="@+id/radio_button4"
                style="@style/main_tab_bottom"
                android:layout_marginTop="2.0dip"
                android:drawableTop="@drawable/icon_5_n"
                android:text="@string/more" />
        </RadioGroup>


    </LinearLayout>

</TabHost>